--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -26,7 +26,7 @@
     --orange: #faa032;
     --yellow: yellow;
     --brown: brown;
-    --reference-bgc: var(--blue--light);
+    --reference-bgc: var(--black--alpha-8);
 
     /* Tamanhos */
     --layout-width: 1010px;
@@ -103,13 +103,14 @@ body.--overflow-h {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: calc(var(--layout-width) + 24px);
+        padding-left: 12px;
     }
 }
 
 .header {
     line-height: 2;
     box-shadow: 0 0 10px var(--gray--d);
-    z-index: 1;
 }
 
 .header__logo {
@@ -138,12 +139,6 @@ body.--overflow-h {
 }
 
 /* MENU */
-@media screen and (min-width: 1010px) {
-    .header__menu {
-        margin-right: -10px;
-    }
-}
-
 .header__menu__ul {
     width: 100%;
     display: flex;
@@ -203,6 +198,7 @@ body.--overflow-h {
 .header__menu__label {
     padding: 7.5px 12px 7.5px 0;
     font-size: 12px;
+    min-height: 44px;
 }
 
 .header__menu__btn {
@@ -211,6 +207,7 @@ body.--overflow-h {
     background-color: inherit;
     color: var(--cor-de-texto);
     font-size: 12px;
+    min-height: 44px;
 }
 
 
@@ -359,14 +356,8 @@ input[data-total]:focus,
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: var(--black--alpha-8);
-    z-index: 999;
-}
-
-@media screen and (min-width: 1024px) {
-    .reference-container {
-       display: none;
-    }
+    background-color: var(--reference-bgc);
+    z-index: 666;
 }
 
 .reference-row {
@@ -410,22 +401,6 @@ input[data-total]:focus,
 }
 
 /* Artigos comuns */
-.artigo {
-    width: 700px;
-    height: 90vh;
-    padding: 20px;
-    overflow-y: scroll;
-    position: fixed;
-    top: calc(50vh - 90vh / 2);
-    right: calc(50vw - 700px / 2);
-    z-index: 1000;
-    background-color: var(--yt);
-    font-size: 13.5px;
-    line-height: 1.5;
-    display: none;
-}
-
-/* Artigos comuns */
 @media screen and (max-width: 1023px) {
     .sessao-de-artigos {
         border-top: 10px solid var(--gray--d);
@@ -444,7 +419,7 @@ input[data-total]:focus,
     right: 0;
     top: 42px;
     overflow-y: scroll;
-    z-index: 1000;
+    z-index: 999;
     padding-bottom: 100px;
     display: none;
 }
@@ -458,7 +433,7 @@ input[data-total]:focus,
         top: calc(50vh - 90vh / 2);
         right: calc(50vw - 700px / 2);
         overflow-y: auto;
-        z-index: 1000;
+        z-index: 999;
         display: none;
     }
 }
@@ -476,7 +451,8 @@ input[data-total]:focus,
     padding: 0 10px;
     position: fixed;
     top: 56px;
-    right: 2px;
+    right: 3px;
+    z-index: 1000;
     background-color: transparent;
 }
 
@@ -519,6 +495,7 @@ input[data-total]:focus,
         top: 0;
         background-color: var(--yt);
         width: 100%;
+        z-index: 999;
     }
 
     .artigo--ajuda details {
@@ -655,10 +632,8 @@ details mark {
 
 .details__moldura__legenda {
     font-size: 12px;
-    font-style: italic;
-    margin-top: 5px;
+    margin-top: 15px;
 }
-
 .details-salvar-ficha-como-pdf li {
     line-height: 2;
 }
@@ -675,7 +650,7 @@ details mark {
     position: fixed;
     right: calc(50vw - (var(--layout-width) + 15px) / 2);
     bottom: -164px;
-    z-index: 1000;
+    z-index: 999;
     visibility: hidden;
     transition: bottom 150ms;
 }
@@ -703,12 +678,6 @@ details mark {
 .dialog-box-default.--open {
     bottom: 20px;
     visibility: visible
-}
-
-@media print {
-    .dialog-box-default.--open {
-        visibility: hidden;
-    }
 }
 
 .dialog-box-default--small.--open {
@@ -762,10 +731,16 @@ details mark {
     background-color: var(--gray--4);
     position: fixed;
     top: -35px;
-    right: calc(50vw - 257px / 2);
+    right: calc(50vw - 252px / 2);
     visibility: hidden;
     transition: top .2s linear;
-    z-index: 888;
+    z-index: 666;
+}
+
+@media screen and (max-width: 1023px) {
+    .dialog-box-ir-para {
+        right: calc(50vw - 274px / 2);
+    }
 }
 
 .dialog-box-ir-para.--open {
@@ -774,7 +749,7 @@ details mark {
 }
 
 .dialog-box-ir-para__input-linha {
-    min-width: 188px;
+    width: 188px;
     padding: 2px 0 2px 5px;
     border: 2px solid var(--gray--4);
     background-color: var(--gray--d);
@@ -786,50 +761,41 @@ details mark {
     border-color: var(--purple);
 }
 
-.dialog-box-ir-para__btn-ir {
-    font-weight: 700;
-    margin: 0 2px;
-    border-radius: 1px;
-    font-size: 14px;
-}
-
-.dialog-box-ir-para__btn-ir:hover {
-    background-color: var(--yt);
-    border-radius: 2px;
-}
-
-
-.dialog-box-ir-para__btn-ir:active {
-    opacity: .7;
-}
-
-.dialog-box-ir-para__btn-fechar {
+.dialog-box-ir-para__btn {
     width: 24px;
-    height: 20px;
+    margin: 0 2px;
     font-weight: 700;
-    background-color: inherit;
-    color: var(--yt);
-    font-size: 16px;
-    margin-left: 2px
-}
-
-.dialog-box-ir-para__btn-fechar:hover {
-    background-color: var(--cor-de-risco);
-    border-radius: 2px
 }
 
 @media screen and (max-width: 1023px) {
-    .dialog-box-ir-para__btn-ir {
+    .dialog-box-ir-para__btn {
         width: 35px;
     }
+}
 
-    .dialog-box-ir-para__btn-fechar {
-        width: 30px;
-    }
+.dialog-box-ir-para__btn:active {
+    opacity: .7;
+}
 
-    .dialog-box-ir-para {
-        right: calc(50vw - 276px / 2);
-    }
+.dialog-box-ir-para__btn:hover {
+    border-radius: 2px;
+    background-color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--ir {
+    font-size: 14px;
+    border-radius: 1px;
+}
+
+.dialog-box-ir-para__btn--fechar {
+    height: 20px;
+    font-size: 16px;
+    background-color: inherit;
+    color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--fechar:hover {
+    background-color: var(--cor-de-risco);
 }
 
 .dialog-box-esvaziar-ficha {
@@ -842,7 +808,7 @@ details mark {
     background: var(--yt);
     top: calc(50vh - 443px / 2);
     right: calc(50vw - 375px / 2);
-    z-index: 1000;
+    z-index: 999;
     position: fixed;
     overflow: auto;
     display: none;
@@ -973,7 +939,7 @@ details mark {
     position: fixed;
     top: 0;
     background-color: var(--black--alpha-5);
-    z-index: 999;
+    z-index: 888;
 }
 
 @media print {
